Spring-Boot/trolley/src/main/java/local/example/trolley/api/error/ErrorUtil.java
package local.example.trolley.api.error;

public class ErrorUtil {
}
